# chgcap-rs

./: Cargo.toml  README.md
chgcap/: Cargo.toml
chgcap-debezium/: Cargo.toml
chgcap-mysql/: Cargo.toml  buffer.rs
chgcap-mysql/ddl-parser/: Cargo.toml
chgcap-mysql/ddl-parser/src/: dialect.rs  keywords.rs  lib.rs  parser.rs  tokenizer.rs
chgcap-mysql/ddl-parser/src/ast/: data_type.rs  ddl.rs  mod.rs  value.rs
chgcap-mysql/src/: binlog_stream.rs  config.rs  connection.rs  event.rs  gtid.rs  lib.rs  metrics.rs  mysql_conn.rs  mysql_source.rs  record.rs  schema.rs  snapshot.rs  source.rs  state.rs  storage.rs
chgcap-mysql/test-utils/: Cargo.toml
chgcap-mysql/test-utils/src/: lib.rs  mysql_container.rs
chgcap-mysql/tests/: float_test.rs  simple_test.rs  single_table_cdc.rs  test_runner.rs  util.rs
chgcap-mysql/tests/testdata/: float_test.yaml  single_table_cdc.yaml  testdata.yaml  tinyint_test.yaml
docs/: mysql.md
