[package]
name = "chgcap-mysql"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_builder = "0.12"
futures = "0.3.26"
getset = "0.1.2"
log = "0.4"
mysql_async = "0.31"
futures-core = "0.3"
pin-project = "1"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git", rev = "466f503" }
lazy_static = "1"
env_logger = "0.10"
