[package]
name = "chgcap-mysql"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_builder = "0.12"
futures = "0.3.26"
futures-core = "0.3"
getset = "0.1.2"
log = "0.4"
mysql_async = "0.31"
pin-project = "1"
itertools = "0.10"

[dev-dependencies]
env_logger = "0.10"
lazy_static = "1"
serde = "1"
serde_yaml = "0.9"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git", rev = "466f503" }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = { version = "0.1", features = ["time"] }
