[package]
name = "chgcap-mysql"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_builder = "0.13"
futures = "0.3"
futures-core = "0.3"
getset = "0.1"
itertools = "0.12"
log = "0.4"
mysql_async = { version = "0.33", features = ["binlog"] }
tokio-stream = "0.1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.11"
serde = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = { version = "0.1", features = ["time"] }
testcontainers = "0.15.0"
chgcap-mysql-test-utils = { path = "./test-utils" }
lazy_static = "1"
